--- a/index.html
+++ b/index.html
@@ -280,6 +280,9 @@
                 <a class="nav-link" id="pizza-tab" data-bs-toggle="pill" href="#pizza" role="tab" aria-controls="pizza" aria-selected="false">pizzeria</a>
               </div>
             </div>
+            eregrggg
+            gfgfg
+            fgfgggit a
           <div class="col-xl-9 xol-lg-8 col-12">
             <div class="tab-content" id="v-pills-tabContent">
               <div class="tab-pane fade show active" id="nike" role="tabpanel" aria-labelledby="nike-tab">
